--- a/polynomials.tex
+++ b/polynomials.tex
@@ -9,33 +9,33 @@
 \setlength{\parindent}{0cm}
 \setlength{\lineskip}{10pt}
 
-\newcommand{\hdomi}[2]{
-    \begin{tikzpicture}
-        \tikzmath{
-            \dwidth = 13.5;
-            \dheight = 4.5;
-        }
-    \draw[thick] (0,0) rectangle (\dwidth,\dheight);
-    \draw (\dwidth/2,0) -- (\dwidth/2,\dheight);
-    \node at (\dwidth/4,\dheight/2) {{#1}};
-    \node at (3*\dwidth/4,\dheight/2) {#2};
-    \end{tikzpicture}
-}
+    \newcommand{\hdomi}[2]{
+        \begin{tikzpicture}
+            \tikzmath{
+                \dwidth = 13.5;
+                \dheight = 4.5;
+            }
+        \draw[thick] (0,0) rectangle (\dwidth,\dheight);
+        \draw (\dwidth/2,0) -- (\dwidth/2,\dheight);
+        \node at (\dwidth/4,\dheight/2) {#1};
+        \node at (3*\dwidth/4,\dheight/2) {#2};
+        \end{tikzpicture}
+    } 
 
-\newcommand{\vdomi}[2]{
-    \begin{tikzpicture}
-        \tikzmath{
-            \dwidth = 8;
-            \dheight = 3.5;
-        }
-    \draw[thick] (0,0) rectangle (\dwidth,\dheight);
-    \draw (0,\dheight/2) -- (\dwidth,\dheight/2);
-    \node at (\dwidth/2,3*\dheight/4) {\Large #1};
-    \node at (\dwidth/2,\dheight/4) {\Large #2};
-    \end{tikzpicture}
-}
+    \newcommand{\vdomi}[2]{
+        \begin{tikzpicture}
+            \tikzmath{
+                \dwidth = 8;
+                \dheight = 3.5;
+            }
+        \draw[thick] (0,0) rectangle (\dwidth,\dheight);
+        \draw (0,\dheight/2) -- (\dwidth,\dheight/2);
+        \node at (\dwidth/2,3*\dheight/4) {\Large #1};
+        \node at (\dwidth/2,\dheight/4) {\Large #2};
+        \end{tikzpicture}
+    }
 
-\newcommand{\myplot}[5]{
+    \newcommand{\myplot}[5]{
      \begin{tikzpicture}
           \begin{axis}[
                grid = both,
@@ -82,17 +82,16 @@
 \newcommand{\vplotbox}[5]{
     \resizebox{0.2\textwidth}{!}{\myvplot{#1}{#2}{#3}{#4}{#5}}
 }
-
 \pagestyle{empty}
 \begin{document}
 \begin{center}\hdomi{START}{\plotbox{-1/8*(x-1)^3*(x+3)^2}{-6.5}{6.5}{-4.5}{7.5}}
-\hdomi{$y=-\frac{1}{8}\cdot (x-1)^3\cdot (x+3)^2$}{\plotbox{1/4*(x-2)^2*(x+3)^2}{-6.5}{6.5}{-1.5}{10.5}}
-\hdomi{$y=\frac{1}{4}\cdot (x-2)^2\cdot (x+3)^2$}{\plotbox{-1/3*(x+2)^2*x*(x-1)^2}{-5.5}{7.5}{-4.5}{7.5}}
-\hdomi{$y=-\frac{1}{3}\cdot x\cdot (x+2)^2\cdot (x-1)^2$}{\plotbox{-1/2*(x-2)^2*(x+1)}{-3.5}{3.5}{-3.5}{3.5}}
+\hdomi{$y=-\frac{1}{8}\cdot (x-1)^3\cdot (x+3)^2$}{\plotbox{-1/2*(x-2)^2*(x+1)}{-3.5}{3.5}{-3.5}{3.5}}
 \hdomi{$y=-\frac{1}{2}\cdot (x-2)^2\cdot (x+1)$}{\plotbox{-1/4*(x-2)^2*(x+3)^2}{-6.5}{6.5}{-10.5}{1.5}}
-\hdomi{$y=-\frac{1}{4}\cdot (x-2)^2\cdot (x+3)^2$}{\plotbox{1/4*(x-1)*(x+3)^2}{-6.5}{6.5}{-5.5}{4.5}}
+\hdomi{$y=-\frac{1}{4}\cdot (x-2)^2\cdot (x+3)^2$}{\plotbox{-1/3*(x+2)^2*x*(x-1)^2}{-5.5}{7.5}{-4.5}{7.5}}
+\hdomi{$y=-\frac{1}{3}\cdot x\cdot (x+2)^2\cdot (x-1)^2$}{\plotbox{1/4*(x-1)*(x+3)^2}{-6.5}{6.5}{-5.5}{4.5}}
 \hdomi{$y=\frac{1}{4}\cdot (x-1)\cdot (x+3)^2$}{\plotbox{1/3*x^2*(x+3)}{-7.5}{5.5}{-4.5}{7.5}}
-\hdomi{$y=\frac{1}{3}\cdot x^2\cdot (x+3)$}{END}
+\hdomi{$y=\frac{1}{3}\cdot x^2\cdot (x+3)$}{\plotbox{1/4*(x-2)^2*(x+3)^2}{-6.5}{6.5}{-1.5}{10.5}}
+\hdomi{$y=\frac{1}{4}\cdot (x-2)^2\cdot (x+3)^2$}{END}
 
 \end{center}
 \end{document}
