--- a/basic-functions.tex
+++ b/basic-functions.tex
@@ -84,24 +84,42 @@
 }
 \pagestyle{empty}
 \begin{document}
-\begin{center}\hdomi{START}{\plotbox{1/4*(x-1)*(x+3)^2}{-6.5}{6.5}{-5.5}{4.5}}
-\hdomi{$y=\frac{1}{4}\cdot (x-1)\cdot (x+3)^2$}{\plotbox{1/4*(x+3)*(x+1)*(x-2)}{-5.5}{4.5}{-4.5}{5.5}}
-\hdomi{$y=\frac{1}{4}\cdot (x+3)\cdot (x+1)\cdot (x-2)$}{\plotbox{1/4*(x-2)^2*(x+3)^2}{-6.5}{6.5}{-1.5}{10.5}}
-\hdomi{$y=\frac{1}{4}\cdot (x-2)^2\cdot (x+3)^2$}{\plotbox{-1/6*x^2*(x-3)*(x+2)}{-4.5}{5.5}{-4.5}{6.5}}
-\hdomi{$y=-\frac{1}{6}\cdot x^2\cdot (x-3)\cdot (x+2)$}{\plotbox{-1/4*(x-2)^2*(x+3)^2}{-6.5}{6.5}{-10.5}{1.5}}
-\hdomi{$y=-\frac{1}{4}\cdot (x-2)^2\cdot (x+3)^2$}{\plotbox{1/8*(x+1)^2*(x-2)^2}{-4.5}{5.5}{-1.5}{6.5}}
-\hdomi{$y=\frac{1}{8}\cdot (x+1)^2\cdot (x-2)^2$}{\plotbox{-1/4*(x+1)*(x-1)^2*(x-3)}{-3.5}{5.5}{-3.5}{6.5}}
-\hdomi{$y=-\frac{1}{4}\cdot (x+1)\cdot (x-1)^2\cdot (x-3)$}{\plotbox{-1/8*(x+2)^2*(x-1)*(x-3)}{-4.5}{5.5}{-3.5}{6.5}}
-\hdomi{$y=-\frac{1}{8}\cdot (x+2)^2\cdot (x-1)\cdot (x-3)$}{\plotbox{-1/2*(x-2)^2*(x+1)}{-3.5}{3.5}{-3.5}{3.5}}
-\hdomi{$y=-\frac{1}{2}\cdot (x-2)^2\cdot (x+1)$}{\plotbox{1/3*x^2*(x+3)}{-7.5}{5.5}{-4.5}{7.5}}
-\hdomi{$y=\frac{1}{3}\cdot x^2\cdot (x+3)$}{\plotbox{-1/3*(x+2)^2*x*(x-1)^2}{-5.5}{7.5}{-4.5}{7.5}}
-\hdomi{$y=-\frac{1}{3}\cdot x\cdot (x+2)^2\cdot (x-1)^2$}{\plotbox{1/3*(x-1)^3}{-2.5}{4.5}{-5.5}{5.5}}
-\hdomi{$y=\frac{1}{3}\cdot (x-1)^3$}{\plotbox{-1/8*(x-1)^3*(x+3)^2}{-6.5}{6.5}{-4.5}{7.5}}
-\hdomi{$y=-\frac{1}{8}\cdot (x-1)^3\cdot (x+3)^2$}{\plotbox{1/2*x*(x-2)^2}{-2.5}{4.5}{-2.5}{4.5}}
-\hdomi{$y=\frac{1}{2}\cdot x\cdot (x-2)^2$}{\plotbox{1/2*(x+2)*(x-1)*(x-3)}{-4.5}{5.5}{-5.5}{5.5}}
-\hdomi{$y=\frac{1}{2}\cdot (x+2)\cdot (x-1)\cdot (x-3)$}{\plotbox{-1/2*x^3}{-3.5}{3.5}{-5.5}{5.5}}
-\hdomi{$y=-\frac{1}{2}\cdot x^3$}{\plotbox{-1/4*x*(x-2)*(x+2)}{-4.5}{4.5}{-3.5}{3.5}}
-\hdomi{$y=-\frac{1}{4}\cdot x\cdot (x-2)\cdot (x+2)$}{END}
+\begin{center}\hdomi{START}{\plotbox{exp(x)}{-3.5}{2.5}{-1.5}{7.5}}
+\hdomi{$y=e^x$}{\plotbox{-x+2}{-5.5}{5.5}{-3.5}{7.5}}
+\hdomi{$y=-x+2$}{\plotbox{abs(x-2)}{-3.5}{7.5}{-1.5}{5.5}}
+\hdomi{$y=|x-2|$}{\plotbox{2^x}{-3.5}{3.5}{-1.5}{8.5}}
+\hdomi{$y=2^x$}{\plotbox{(x+1)^2-3}{-5.5}{3.5}{-4.5}{5.5}}
+\hdomi{$y=(x+1)^2-3$}{\plotbox{sin(deg(2*x))}{-4}{4}{-2.5}{2.5}}
+\hdomi{$y=\sin(2x)$}{\plotbox{-ln(x)}{0.01}{8.5}{-3.5}{4.5}}
+\hdomi{$y=-\ln(x)$}{\plotbox{sqrt(x-1)}{0.5}{9.5}{-1.5}{4.5}}
+\hdomi{$y=\sqrt{x-1}$}{\plotbox{-x^3}{-3.5}{3.5}{-5.5}{5.5}}
+\hdomi{$y=-x^3$}{\plotbox{-x^2+4}{-4.5}{4.5}{-5.5}{5.5}}
+\hdomi{$y=-x^2+4$}{\plotbox{x}{-5.5}{5.5}{-5.5}{5.5}}
+\hdomi{$y=x$}{\plotbox{cos(deg(x))+1}{-7}{7}{-1.5}{3.5}}
+\hdomi{$y=\cos(x)+1$}{\plotbox{cos(deg(x))}{-7}{7}{-2.5}{2.5}}
+\hdomi{$y=\cos(x)$}{\plotbox{x^3}{-3.5}{3.5}{-5.5}{5.5}}
+\hdomi{$y=x^3$}{\plotbox{x^2}{-4.5}{4.5}{-1.5}{8.5}}
+\hdomi{$y=x^2$}{\plotbox{(x-2)^2}{-2.5}{6.5}{-1.5}{8.5}}
+\hdomi{$y=(x-2)^2$}{\plotbox{abs(x)}{-5.5}{5.5}{-1.5}{5.5}}
+\hdomi{$y=|x|$}{\plotbox{1/x}{-5.5}{5.5}{-5.5}{5.5}}
+\hdomi{$y=\frac{1}{x}$}{\plotbox{tan(deg(x))}{-1.4}{1.4}{-5.5}{5.5}}
+\hdomi{$y=\tan(x)$}{\plotbox{sqrt(x)}{-0.5}{9.5}{-1.5}{4.5}}
+\hdomi{$y=\sqrt{x}$}{\plotbox{1/2*x^2}{-5.5}{5.5}{-1.5}{7.5}}
+\hdomi{$y=\frac{1}{2}x^2$}{\plotbox{-2*x^2}{-3.5}{3.5}{-8.5}{1.5}}
+\hdomi{$y=-2x^2$}{\plotbox{2*x-1}{-3.5}{3.5}{-7.5}{5.5}}
+\hdomi{$y=2x-1$}{\plotbox{-exp(x)}{-2.5}{3.5}{-7.5}{1.5}}
+\hdomi{$y=-e^x$}{\plotbox{1/x^2}{-4.5}{4.5}{-1.5}{8.5}}
+\hdomi{$y=\frac{1}{x^2}$}{\plotbox{-abs(x)+3}{-5.5}{5.5}{-2.5}{4.5}}
+\hdomi{$y=-|x|+3$}{\plotbox{-sin(deg(x))}{-7}{7}{-2.5}{2.5}}
+\hdomi{$y=-\sin(x)$}{\plotbox{-sqrt(x)}{-0.5}{9.5}{-4.5}{1.5}}
+\hdomi{$y=-\sqrt{x}$}{\plotbox{sin(deg(x))}{-7}{7}{-2.5}{2.5}}
+\hdomi{$y=\sin(x)$}{\plotbox{ln(x)}{0.01}{8.5}{-4.5}{3.5}}
+\hdomi{$y=\ln(x)$}{\plotbox{exp(-x)}{-2.5}{3.5}{-1.5}{7.5}}
+\hdomi{$y=e^{-x}$}{\plotbox{-1/x}{-5.5}{5.5}{-5.5}{5.5}}
+\hdomi{$y=-\frac{1}{x}$}{\plotbox{x^2-4}{-4.5}{4.5}{-5.5}{5.5}}
+\hdomi{$y=x^2-4$}{\plotbox{2*sin(deg(x))}{-7}{7}{-3.5}{3.5}}
+\hdomi{$y=2\sin(x)$}{\plotbox{ln(x+2)}{-1.99}{6.5}{-4.5}{3.5}}
+\hdomi{$y=\ln(x+2)$}{END}
 
 \end{center}
 \end{document}
