--- a/combinatorics-fix.tex
+++ b/combinatorics-fix.tex
@@ -4,7 +4,7 @@
 \usetikzlibrary{plotmarks, math}
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.16}
-\usepackage[margin=0cm, top=1cm, landscape]{geometry}
+\usepackage[margin=0cm, landscape]{geometry}
 
 \setlength{\parindent}{0cm}
 \setlength{\lineskip}{10pt}
@@ -30,8 +30,8 @@
             }
         \draw[thick] (0,0) rectangle (\dwidth,\dheight);
         \draw (0,\dheight/2) -- (\dwidth,\dheight/2);
-        \node at (\dwidth/2,3*\dheight/4) {\Large #1};
-        \node at (\dwidth/2,\dheight/4) {\Large #2};
+        \node at (\dwidth/2,3*\dheight/4) {\parbox{7cm}{\centering #1}};
+        \node at (\dwidth/2,\dheight/4) {\parbox{7cm}{\centering\small #2}};
         \end{tikzpicture}
     }
 
@@ -84,24 +84,16 @@
 }
 \pagestyle{empty}
 \begin{document}
-\begin{center}\hdomi{START}{\plotbox{1/4*(x-1)*(x+3)^2}{-6.5}{6.5}{-5.5}{4.5}}
-\hdomi{$y=\frac{1}{4}\cdot (x-1)\cdot (x+3)^2$}{\plotbox{1/4*(x+3)*(x+1)*(x-2)}{-5.5}{4.5}{-4.5}{5.5}}
-\hdomi{$y=\frac{1}{4}\cdot (x+3)\cdot (x+1)\cdot (x-2)$}{\plotbox{1/4*(x-2)^2*(x+3)^2}{-6.5}{6.5}{-1.5}{10.5}}
-\hdomi{$y=\frac{1}{4}\cdot (x-2)^2\cdot (x+3)^2$}{\plotbox{-1/6*x^2*(x-3)*(x+2)}{-4.5}{5.5}{-4.5}{6.5}}
-\hdomi{$y=-\frac{1}{6}\cdot x^2\cdot (x-3)\cdot (x+2)$}{\plotbox{-1/4*(x-2)^2*(x+3)^2}{-6.5}{6.5}{-10.5}{1.5}}
-\hdomi{$y=-\frac{1}{4}\cdot (x-2)^2\cdot (x+3)^2$}{\plotbox{1/8*(x+1)^2*(x-2)^2}{-4.5}{5.5}{-1.5}{6.5}}
-\hdomi{$y=\frac{1}{8}\cdot (x+1)^2\cdot (x-2)^2$}{\plotbox{-1/4*(x+1)*(x-1)^2*(x-3)}{-3.5}{5.5}{-3.5}{6.5}}
-\hdomi{$y=-\frac{1}{4}\cdot (x+1)\cdot (x-1)^2\cdot (x-3)$}{\plotbox{-1/8*(x+2)^2*(x-1)*(x-3)}{-4.5}{5.5}{-3.5}{6.5}}
-\hdomi{$y=-\frac{1}{8}\cdot (x+2)^2\cdot (x-1)\cdot (x-3)$}{\plotbox{-1/2*(x-2)^2*(x+1)}{-3.5}{3.5}{-3.5}{3.5}}
-\hdomi{$y=-\frac{1}{2}\cdot (x-2)^2\cdot (x+1)$}{\plotbox{1/3*x^2*(x+3)}{-7.5}{5.5}{-4.5}{7.5}}
-\hdomi{$y=\frac{1}{3}\cdot x^2\cdot (x+3)$}{\plotbox{-1/3*(x+2)^2*x*(x-1)^2}{-5.5}{7.5}{-4.5}{7.5}}
-\hdomi{$y=-\frac{1}{3}\cdot x\cdot (x+2)^2\cdot (x-1)^2$}{\plotbox{1/3*(x-1)^3}{-2.5}{4.5}{-5.5}{5.5}}
-\hdomi{$y=\frac{1}{3}\cdot (x-1)^3$}{\plotbox{-1/8*(x-1)^3*(x+3)^2}{-6.5}{6.5}{-4.5}{7.5}}
-\hdomi{$y=-\frac{1}{8}\cdot (x-1)^3\cdot (x+3)^2$}{\plotbox{1/2*x*(x-2)^2}{-2.5}{4.5}{-2.5}{4.5}}
-\hdomi{$y=\frac{1}{2}\cdot x\cdot (x-2)^2$}{\plotbox{1/2*(x+2)*(x-1)*(x-3)}{-4.5}{5.5}{-5.5}{5.5}}
-\hdomi{$y=\frac{1}{2}\cdot (x+2)\cdot (x-1)\cdot (x-3)$}{\plotbox{-1/2*x^3}{-3.5}{3.5}{-5.5}{5.5}}
-\hdomi{$y=-\frac{1}{2}\cdot x^3$}{\plotbox{-1/4*x*(x-2)*(x+2)}{-4.5}{4.5}{-3.5}{3.5}}
-\hdomi{$y=-\frac{1}{4}\cdot x\cdot (x-2)\cdot (x+2)$}{END}
+\begin{center}\vdomi{START}{How many 4-letter words can be formed from the letters of BANANA?}
+\vdomi{$2\cdot \frac{4!}{2!} + 2\cdot \frac{4!}{3!} + \frac{4!}{2!\cdot 2!} = 38$}{How many 4-letter words can be formed from the letters of BANANA?}
+\vdomi{$2\cdot \frac{4!}{2!} + 2\cdot \frac{4!}{3!} + \frac{4!}{2!\cdot 2!} = 38$}{How many 4-letter words can be formed from the letters of BANANA?}
+\vdomi{$2\cdot \frac{4!}{2!} + 2\cdot \frac{4!}{3!} + \frac{4!}{2!\cdot 2!} = 38$}{How many 4-letter words can be formed from the letters of BANANA?}
+\vdomi{$2\cdot \frac{4!}{2!} + 2\cdot \frac{4!}{3!} + \frac{4!}{2!\cdot 2!} = 38$}{How many 4-letter words can be formed from the letters of BANANA?}
+\vdomi{$2\cdot \frac{4!}{2!} + 2\cdot \frac{4!}{3!} + \frac{4!}{2!\cdot 2!} = 38$}{How many 4-letter words can be formed from the letters of BANANA?}
+\vdomi{$2\cdot \frac{4!}{2!} + 2\cdot \frac{4!}{3!} + \frac{4!}{2!\cdot 2!} = 38$}{How many 4-letter words can be formed from the letters of BANANA?}
+\vdomi{$2\cdot \frac{4!}{2!} + 2\cdot \frac{4!}{3!} + \frac{4!}{2!\cdot 2!} = 38$}{How many 4-letter words can be formed from the letters of BANANA?}
+\vdomi{$2\cdot \frac{4!}{2!} + 2\cdot \frac{4!}{3!} + \frac{4!}{2!\cdot 2!} = 38$}{END}
+\vdomi{}{}
 
 \end{center}
 \end{document}
