--- a/content-horizontal.tex
+++ b/content-horizontal.tex
@@ -1,8 +1,24 @@
-\hdomi{START}{\plotbox{-1/3*(x+2)^2*x*(x-1)^2}{-5.5}{7.5}{-4.5}{7.5}}
-\hdomi{$y=-\frac{1}{3}\cdot x\cdot (x+2)^2\cdot (x-1)^2$}{\plotbox{1/4*(x-2)^2*(x+3)^2}{-6.5}{6.5}{-1.5}{10.5}}
-\hdomi{$y=\frac{1}{4}\cdot (x-2)^2\cdot (x+3)^2$}{\plotbox{-1/2*(x-2)^2*(x+1)}{-3.5}{3.5}{-3.5}{3.5}}
-\hdomi{$y=-\frac{1}{2}\cdot (x-2)^2\cdot (x+1)$}{\plotbox{-1/4*(x-2)^2*(x+3)^2}{-6.5}{6.5}{-10.5}{1.5}}
-\hdomi{$y=-\frac{1}{4}\cdot (x-2)^2\cdot (x+3)^2$}{\plotbox{1/3*x^2*(x+3)}{-7.5}{5.5}{-4.5}{7.5}}
-\hdomi{$y=\frac{1}{3}\cdot x^2\cdot (x+3)$}{\plotbox{1/4*(x-1)*(x+3)^2}{-6.5}{6.5}{-5.5}{4.5}}
-\hdomi{$y=\frac{1}{4}\cdot (x-1)\cdot (x+3)^2$}{\plotbox{-1/8*(x-1)^3*(x+3)^2}{-6.5}{6.5}{-4.5}{7.5}}
-\hdomi{$y=-\frac{1}{3}\cdot (x-1)^3\cdot (x+3)^2$}{END}
+\hdomi{START}{A committee of 4 people is chosen from 10 people. How many committees are possible?}
+\hdomi{$\binom{10}{4} = 210$}{In how many ways can you partition 5 distinct objects into 2 non-empty groups?}
+\hdomi{$2^5 - 2 = 30$ (divided by 2) = $15$}{How many 4-letter words can be formed from the letters of BANANA?}
+\hdomi{$\frac{4!}{2!} + \frac{4!}{3!} + \frac{4!}{2!\cdot 2!} = 33$}{How many 3-digit numbers can be formed using the digits 1-5 without repetition?}
+\hdomi{$\frac{5!}{2!} = 60$}{A lock has 4 digits. Each digit can be 0-9. How many combinations exist?}
+\hdomi{$10^4 = 10000$}{How many ways can you roll a sum of 7 with two dice?}
+\hdomi{$6$ ways}{How many ways can you distribute 5 identical candies to 3 children?}
+\hdomi{$\binom{5+3-1}{3-1} = \binom{7}{2} = 21$}{How many positive divisors does $2^3 \cdot 3^2 \cdot 5$ have?}
+\hdomi{$(3+1)(2+1)(1+1) = 24$}{In how many ways can 3 boys and 2 girls be arranged if boys must sit together?}
+\hdomi{$3! \cdot 2! \cdot 2 = 24$}{How many handshakes occur when 10 people each shake hands once?}
+\hdomi{$\binom{10}{2} = 45$}{How many ways can you select 3 books from 8 books?}
+\hdomi{$\binom{8}{3} = 56$}{How many non-negative integer solutions are there to $x+y+z=10$?}
+\hdomi{$\binom{10+3-1}{3-1} = \binom{12}{2} = 66$}{How many bit strings of length 6 contain exactly three 1's?}
+\hdomi{$\binom{6}{3} = 20$}{How many words (meaningful or not) can be formed using all letters of MATH?}
+\hdomi{$4! = 24$}{In how many ways can 6 people sit at a circular table?}
+\hdomi{$(6-1)! = 5! = 120$}{How many subsets does a set with 6 elements have?}
+\hdomi{$2^6 = 64$}{In how many ways can you select at least one item from 5 distinct items?}
+\hdomi{$2^5 - 1 = 31$}{How many ways can 5 people be arranged in a row?}
+\hdomi{$5! = 120$}{In how many ways can you arrange the letters of BOOK?}
+\hdomi{$\frac{4!}{2!} = 12$}{How many diagonals does a regular octagon have?}
+\hdomi{$\binom{8}{2} - 8 = 20$}{A pizza shop offers 8 toppings. How many different 3-topping pizzas are possible?}
+\hdomi{$\binom{8}{3} = 56$}{How many ways can you choose a president and vice president from 12 people?}
+\hdomi{$\frac{12!}{10!} = 132$}{How many ways can you arrange the letters of SUCCESS?}
+\hdomi{$\frac{7!}{3!\cdot 2!} = 420$}{END}
