--- a/combintorics.tex
+++ b/combintorics.tex
@@ -84,30 +84,30 @@
 }
 \pagestyle{empty}
 \begin{document}
-\begin{center}\vdomi{START}{How many ways can 5 people be arranged in a row?}
-\vdomi{$5! = 120$}{How many 3-digit numbers can be formed using the digits 1-5 without repetition?}
-\vdomi{$\frac{5!}{2!} = 60$}{A committee of 4 people is chosen from 10 people. How many committees are possible?}
-\vdomi{$\binom{10}{4} = 210$}{How many ways can you select 3 books from 8 books?}
-\vdomi{$\binom{8}{3} = 56$}{How many words (meaningful or not) can be formed using all letters of MATH?}
-\vdomi{$4! = 24$}{In how many ways can you arrange the letters of BOOK?}
-\vdomi{$\frac{4!}{2!} = 12$}{How many subsets does a set with 6 elements have?}
-\vdomi{$2^6 = 64$}{A pizza shop offers 8 toppings. How many different 3-topping pizzas are possible?}
-\vdomi{$\binom{8}{3} = 56$}{How many ways can you distribute 5 identical candies to 3 children?}
-\vdomi{$\binom{5+3-1}{3-1} = \binom{7}{2} = 21$}{In how many ways can 3 boys and 2 girls be arranged if boys must sit together?}
-\vdomi{$3! \cdot 2! \cdot 2 = 24$}{How many 4-letter words can be formed from the letters of BANANA?}
-\vdomi{$2\cdot \frac{4!}{2!} + 2\cdot \frac{4!}{3!} + \frac{4!}{2!\cdot 2!} = 38$}{How many ways can you choose a president and vice president from 12 people?}
-\vdomi{$\frac{12!}{10!} = 132$}{How many non-negative integer solutions are there to $x+y+z=10$?}
+\begin{center}\vdomi{START}{How many 4-letter words can be formed from the letters of BANANA?}
+\vdomi{$2\cdot \frac{4!}{2!} + 2\cdot \frac{4!}{3!} + \frac{4!}{2!\cdot 2!} = 38$}{How many positive divisors does $2^3 \cdot 3^2 \cdot 5$ have?}
+\vdomi{$(3+1)\cdot (2+1)\cdot (1+1) = 24$}{How many bit strings of length 6 contain exactly three 1's?}
+\vdomi{$\binom{6}{3} = 20$}{How many ways can you arrange the letters of SUCCESS?}
+\vdomi{$\frac{7!}{3!\cdot 2!} = 420$}{How many diagonals does a regular octagon have?}
+\vdomi{$\binom{8}{2} - 8 = \frac{8\cdot 5}{2} = 20$}{How many ways can you choose a president and vice president from 12 people?}
+\vdomi{$\frac{12!}{10!} = 132$}{How many ways can you roll a sum of 7 with two dice?}
+\vdomi{$6$ ways}{In how many ways can you arrange the letters of BOOK?}
+\vdomi{$\frac{4!}{2!} = 12$}{A pizza shop offers 8 toppings. How many different 3-topping pizzas are possible?}
+\vdomi{$\binom{8}{3} = 56$}{In how many ways can you select at least one item from 5 distinct items?}
+\vdomi{$2^5 - 1 = 31$}{How many subsets does a set with 6 elements have?}
+\vdomi{$2^6 = 64$}{In how many ways can 3 boys and 2 girls be arranged if boys must sit together?}
+\vdomi{$3! \cdot 3! = 36$}{In how many ways can 6 people sit at a circular table?}
+\vdomi{$\frac{6!}{6} = 5! = 120$}{How many non-negative integer solutions are there to $x+y+z=10$?}
 \vdomi{$\binom{10+3-1}{3-1} = \binom{12}{2} = 66$}{A lock has 4 digits. Each digit can be 0-9. How many combinations exist?}
-\vdomi{$10^4 = 10000$}{In how many ways can you select at least one item from 5 distinct items?}
-\vdomi{$2^5 - 1 = 31$}{How many diagonals does a regular octagon have?}
-\vdomi{$\binom{8}{2} - 8 = 20$}{How many ways can you arrange the letters of SUCCESS?}
-\vdomi{$\frac{7!}{3!\cdot 2!} = 420$}{In how many ways can 6 people sit at a circular table?}
-\vdomi{$\frac{6!}{6} = 5! = 120$}{How many handshakes occur when 10 people each shake hands once?}
-\vdomi{$\binom{10}{2} = 45$}{How many positive divisors does $2^3 \cdot 3^2 \cdot 5$ have?}
-\vdomi{$(3+1)(2+1)(1+1) = 24$}{In how many ways can you partition 5 distinct objects into 2 non-empty groups?}
-\vdomi{$\binom{5}{1} + \binom{5}{2} = 15$}{How many ways can you roll a sum of 7 with two dice?}
-\vdomi{$6$ ways}{How many bit strings of length 6 contain exactly three 1's?}
-\vdomi{$\binom{6}{3} = 20$}{END}
+\vdomi{$10^4 = 10000$}{How many ways can you select 3 books from 8 books?}
+\vdomi{$\binom{8}{3} = 56$}{How many handshakes occur when 10 people each shake hands once?}
+\vdomi{$\binom{10}{2} = 45$}{How many ways can you distribute 5 identical candies to 3 children?}
+\vdomi{$\binom{5+3-1}{3-1} = \binom{7}{2} = 21$}{A committee of 4 people is chosen from 10 people. How many committees are possible?}
+\vdomi{$\binom{10}{4} = 210$}{How many ways can 5 people be arranged in a row?}
+\vdomi{$5! = 120$}{How many 3-digit numbers can be formed using the digits 1-5 without repetition?}
+\vdomi{$\frac{5!}{2!} = 60$}{How many words (meaningful or not) can be formed using all letters of MATH?}
+\vdomi{$4! = 24$}{In how many ways can you partition 5 distinct objects into 2 non-empty groups?}
+\vdomi{$\binom{5}{1} + \binom{5}{2} = 15$}{END}
 
 \end{center}
 \end{document}
