--- a/polynomials-2.tex
+++ b/polynomials-2.tex
@@ -84,24 +84,22 @@
 }
 \pagestyle{empty}
 \begin{document}
-\begin{center}\hdomi{START}{\plotbox{1/2*x*(x-2)^2}{-2.5}{4.5}{-2.5}{4.5}}
-\hdomi{$y=\frac{1}{2}\cdot x\cdot (x-2)^2$}{\plotbox{1/8*(x+1)^2*(x-2)^2}{-4.5}{5.5}{-1.5}{6.5}}
-\hdomi{$y=\frac{1}{8}\cdot (x+1)^2\cdot (x-2)^2$}{\plotbox{1/3*x^2*(x+3)}{-7.5}{5.5}{-4.5}{7.5}}
-\hdomi{$y=\frac{1}{3}\cdot x^2\cdot (x+3)$}{\plotbox{1/3*(x-1)^3}{-2.5}{4.5}{-5.5}{5.5}}
-\hdomi{$y=\frac{1}{3}\cdot (x-1)^3$}{\plotbox{-1/8*(x-1)^3*(x+3)^2}{-6.5}{6.5}{-4.5}{7.5}}
-\hdomi{$y=-\frac{1}{8}\cdot (x-1)^3\cdot (x+3)^2$}{\plotbox{-1/4*x*(x-2)*(x+2)}{-4.5}{4.5}{-3.5}{3.5}}
-\hdomi{$y=-\frac{1}{4}\cdot x\cdot (x-2)\cdot (x+2)$}{\plotbox{-1/4*(x-2)^2*(x+3)^2}{-6.5}{6.5}{-10.5}{1.5}}
+\begin{center}\hdomi{START}{\plotbox{-1/4*(x+1)*(x-1)^2*(x-3)}{-3.5}{5.5}{-3.5}{6.5}}
+\hdomi{$y=-\frac{1}{4}\cdot (x+1)\cdot (x-1)^2\cdot (x-3)$}{\plotbox{1/8*(x+1)^2*(x-2)^2}{-4.5}{5.5}{-1.5}{6.5}}
+\hdomi{$y=\frac{1}{8}\cdot (x+1)^2\cdot (x-2)^2$}{\plotbox{1/2*x*(x-2)^2}{-2.5}{4.5}{-2.5}{4.5}}
+\hdomi{$y=\frac{1}{2}\cdot x\cdot (x-2)^2$}{\plotbox{1/4*(x-1)*(x+3)^2}{-6.5}{6.5}{-5.5}{4.5}}
+\hdomi{$y=\frac{1}{4}\cdot (x-1)\cdot (x+3)^2$}{\plotbox{-1/8*(x+2)^2*(x-1)*(x-3)}{-4.5}{5.5}{-3.5}{6.5}}
+\hdomi{$y=-\frac{1}{8}\cdot (x+2)^2\cdot (x-1)\cdot (x-3)$}{\plotbox{1/3*(x-1)^3}{-2.5}{4.5}{-5.5}{5.5}}
+\hdomi{$y=\frac{1}{3}\cdot (x-1)^3$}{\plotbox{1/4*(x-2)^2*(x+3)^2}{-6.5}{6.5}{-1.5}{10.5}}
+\hdomi{$y=\frac{1}{4}\cdot (x-2)^2\cdot (x+3)^2$}{\plotbox{-1/4*(x-2)^2*(x+3)^2}{-6.5}{6.5}{-10.5}{1.5}}
 \hdomi{$y=-\frac{1}{4}\cdot (x-2)^2\cdot (x+3)^2$}{\plotbox{-1/6*x^2*(x-3)*(x+2)}{-4.5}{5.5}{-4.5}{6.5}}
-\hdomi{$y=-\frac{1}{6}\cdot x^2\cdot (x-3)\cdot (x+2)$}{\plotbox{-1/2*x^3}{-3.5}{3.5}{-5.5}{5.5}}
-\hdomi{$y=-\frac{1}{2}\cdot x^3$}{\plotbox{-1/2*(x-2)^2*(x+1)}{-3.5}{3.5}{-3.5}{3.5}}
+\hdomi{$y=-\frac{1}{6}\cdot x^2\cdot (x-3)\cdot (x+2)$}{\plotbox{1/4*(x+3)*(x+1)*(x-2)}{-5.5}{4.5}{-4.5}{5.5}}
+\hdomi{$y=\frac{1}{4}\cdot (x+3)\cdot (x+1)\cdot (x-2)$}{\plotbox{-1/4*x*(x-2)*(x+2)}{-4.5}{4.5}{-3.5}{3.5}}
+\hdomi{$y=-\frac{1}{4}\cdot x\cdot (x-2)\cdot (x+2)$}{\plotbox{-1/2*(x-2)^2*(x+1)}{-3.5}{3.5}{-3.5}{3.5}}
 \hdomi{$y=-\frac{1}{2}\cdot (x-2)^2\cdot (x+1)$}{\plotbox{1/2*(x+2)*(x-1)*(x-3)}{-4.5}{5.5}{-5.5}{5.5}}
-\hdomi{$y=\frac{1}{2}\cdot (x+2)\cdot (x-1)\cdot (x-3)$}{\plotbox{-1/3*(x+2)^2*x*(x-1)^2}{-5.5}{7.5}{-4.5}{7.5}}
-\hdomi{$y=-\frac{1}{3}\cdot x\cdot (x+2)^2\cdot (x-1)^2$}{\plotbox{-1/4*(x+1)*(x-1)^2*(x-3)}{-3.5}{5.5}{-3.5}{6.5}}
-\hdomi{$y=-\frac{1}{4}\cdot (x+1)\cdot (x-1)^2\cdot (x-3)$}{\plotbox{1/4*(x-2)^2*(x+3)^2}{-6.5}{6.5}{-1.5}{10.5}}
-\hdomi{$y=\frac{1}{4}\cdot (x-2)^2\cdot (x+3)^2$}{\plotbox{-1/8*(x+2)^2*(x-1)*(x-3)}{-4.5}{5.5}{-3.5}{6.5}}
-\hdomi{$y=-\frac{1}{8}\cdot (x+2)^2\cdot (x-1)\cdot (x-3)$}{\plotbox{1/4*(x+3)*(x+1)*(x-2)}{-5.5}{4.5}{-4.5}{5.5}}
-\hdomi{$y=\frac{1}{4}\cdot (x+3)\cdot (x+1)\cdot (x-2)$}{\plotbox{1/4*(x-1)*(x+3)^2}{-6.5}{6.5}{-5.5}{4.5}}
-\hdomi{$y=\frac{1}{4}\cdot (x-1)\cdot (x+3)^2$}{END}
+\hdomi{$y=\frac{1}{2}\cdot (x+2)\cdot (x-1)\cdot (x-3)$}{\plotbox{-1/8*(x-1)^3*(x+3)^2}{-6.5}{6.5}{-4.5}{7.5}}
+\hdomi{$y=-\frac{1}{8}\cdot (x-1)^3\cdot (x+3)^2$}{\plotbox{-1/2*x^3}{-3.5}{3.5}{-5.5}{5.5}}
+\hdomi{$y=-\frac{1}{2}\cdot x^3$}{END}
 
 \end{center}
 \end{document}
