added derivative dominos

--- a/content.tex
+++ b/content.tex
@@ -1,22 +1,22 @@
-\vdomi{START}{$5\leq x<8$}
-\vdomi{$[5,8)$}{$x\geq 8$}
-\vdomi{$[8,\infty)$}{$(2,\infty)\cup (-\infty,2)$}
-\vdomi{$\mathbb{R}\setminus\{2\}$}{$-1<x<5$}
-\vdomi{$(-1,5)$}{$[2,6]\setminus [-1,3]$}
-\vdomi{$(3,6]$}{$[3,\infty)\setminus [5,\infty)$}
-\vdomi{$[3,5)$}{$(-1,4]\cup (2,8)$}
-\vdomi{$(-1,8)$}{$(-\infty,3)\cup [0,4)$}
-\vdomi{$(-\infty, 4)$}{$[-4,3)\cap [0,4)$}
-\vdomi{$[0,3)$}{$x\leq 3$}
-\vdomi{$(-\infty,3]$}{$x>-1$}
+\vdomi{START}{$x\geq 8$}
+\vdomi{$[8,\infty)$}{$[2,6]\setminus [-1,3]$}
+\vdomi{$(3,6]$}{$-1<x<5$}
+\vdomi{$(-1,5)$}{$(-1,4]\cup (2,8)$}
+\vdomi{$(-1,8)$}{$(4,9)\cap [4,7]$}
+\vdomi{$(4,7]$}{$[2,3]\cup (-1,2]$}
+\vdomi{$(-1,3]$}{$2\leq x\leq 9$}
+\vdomi{$[2,9]$}{$[-4,3)\cap [0,4)$}
+\vdomi{$[0,3)$}{$-1<x\leq 5$}
+\vdomi{$(-1,5]$}{$(2,\infty)\cup (-\infty,2)$}
+\vdomi{$\mathbb{R}\setminus\{2\}$}{$(-\infty,3)\cup [0,\infty)$}
+\vdomi{$\mathbb{R}$}{$(-\infty,3)\cup [0,4)$}
+\vdomi{$(-\infty, 4)$}{$(-\infty,3)\setminus [0,4)$}
+\vdomi{$(-\infty, 0)$}{$[3,\infty)\setminus [5,\infty)$}
+\vdomi{$[3,5)$}{$[2,3]\cap (4,7]$}
+\vdomi{$\emptyset$}{$x>-1$}
 \vdomi{$(-1,\infty)$}{$x<\pi$}
-\vdomi{$(-\infty,\pi)$}{$2\leq x\leq 9$}
-\vdomi{$[2,9]$}{$[2,3]\cap [-1,6]$}
-\vdomi{$[2,3]$}{$(4,9)\cap [4,7]$}
-\vdomi{$(4,7]$}{$(-\infty,3)\cup [0,\infty)$}
-\vdomi{$\mathbb{R}$}{$-1<x\leq 5$}
-\vdomi{$(-1,5]$}{$(-\infty,3)\setminus [0,4)$}
-\vdomi{$(-\infty, 0)$}{$(-1,5)\setminus [-1,3)$}
-\vdomi{$[3,5)$}{$[2,3]\cup (-1,2]$}
-\vdomi{$(-1,3]$}{$[2,3]\cap (4,7]$}
-\vdomi{$\emptyset$}{END}
+\vdomi{$(-\infty,\pi)$}{$[2,3]\cap [-1,6]$}
+\vdomi{$[2,3]$}{$5\leq x<8$}
+\vdomi{$[5,8)$}{$x\leq 3$}
+\vdomi{$(-\infty,3]$}{$(-1,5)\setminus [-1,3)$}
+\vdomi{$[3,5)$}{END}
