added background colors

--- a/dominos-derivatives.tex
+++ b/dominos-derivatives.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{amsmath,amssymb}
+\usepackage{xcolor}
 \RequirePackage{tikz}
 \usetikzlibrary{plotmarks, math}
 \usepackage{pgfplots}
@@ -84,6 +85,7 @@
 }
 \pagestyle{empty}
 \begin{document}
+\pagecolor{green!10}
 \begin{center}\hdomi{START}{$f(x) = x^3 \cdot e^x$.}
 \hdomi{$f'(x) = 3x^2 \cdot e^x + x^3 \cdot e^x$}{$f(x) = \dfrac{x^2}{x+1}$.}
 \hdomi{$f'(x) = \dfrac{2x \cdot (x+1) - x^2 \cdot 1}{(x+1)^2}$}{$f(x) = 5x^3 - 2x + 1$.}
